--- a/src/assets/scss/paper-kit.scss
+++ b/src/assets/scss/paper-kit.scss
@@ -35,7 +35,7 @@
 @import "paper-kit/labels";
 
 // components
-// @import "paper-kit/nucleo-icons";
+@import "paper-kit/nucleo-icons";
 @import "paper-kit/social-buttons";
 @import "paper-kit/tabs-navs";
 @import "paper-kit/navbars";
